refactor: large rework (#50)